@@ -192,10 +192,6 @@ som_solib_create_inferior_hook (int from_tty)
   char buf[4];
   CORE_ADDR anaddr;
 
-  /* First, remove all the solib event breakpoints.  Their addresses
-     may have changed since the last time we ran the program.  */
-  remove_solib_event_breakpoints ();
-
   if (symfile_objfile == NULL)
     return;
 
